[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui_elements/image_entry/sources/iconography/load/normal.png" type="Texture" id=1]
[ext_resource path="res://ui_elements/image_entry/sources/iconography/load/highlighted.png" type="Texture" id=2]
[ext_resource path="res://ui_elements/image_entry/sources/iconography/load/disabled.png" type="Texture" id=3]
[ext_resource path="res://ui_elements/image_entry/sources/iconography/load/pressed.png" type="Texture" id=4]
[ext_resource path="res://ui_elements/image_entry/sources/sources.gd" type="Script" id=5]
[ext_resource path="res://addons/krakatoa/nodes/control/full_window_file_dialog.gd" type="Script" id=6]
[ext_resource path="res://ui_elements/image_entry/sources/iconography/remove/normal.png" type="Texture" id=7]
[ext_resource path="res://ui_elements/image_entry/sources/iconography/remove/pressed.png" type="Texture" id=8]
[ext_resource path="res://ui_elements/image_entry/sources/iconography/remove/highlighted.png" type="Texture" id=9]
[ext_resource path="res://ui_elements/image_entry/sources/iconography/remove/disabled.png" type="Texture" id=10]

[node name="Controls" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 25.0
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 58.0
margin_bottom = 19.0
text = "Sources"
uppercase = true

[node name="Options" type="OptionButton" parent="."]
margin_left = 62.0
margin_right = 242.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "BEST MATCH"
clip_text = true
items = [ "BEST MATCH", null, false, 0, null ]
selected = 0

[node name="SelectFile" type="TextureButton" parent="."]
margin_left = 246.0
margin_right = 271.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "SELECT AN IMAGE"
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveFile" type="TextureButton" parent="."]
visible = false
margin_left = 232.0
margin_right = 257.0
margin_bottom = 586.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "SELECT AN IMAGE"
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 204.0
margin_right = 461.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Load a Source Image"
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.bmp; BMP Images", "*.jpg; JPG Images", "*.jpeg; JPEG Images", "*.png; PNG Images", "*.tga; TARGA Images", "*.webp; WEBP Images" )
current_dir = "/Projects/Godot/Utilities/ICOGen/Project"
current_path = "/Projects/Godot/Utilities/ICOGen/Project/"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SelectFile" to="." method="_on_SelectFile_pressed"]
[connection signal="pressed" from="RemoveFile" to="." method="_on_RemoveFile_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
